FEAT: Implement country layout with top menu and footer components

--- a/src/app/shared/pages/home-page/home-page.component.html
+++ b/src/app/shared/pages/home-page/home-page.component.html
@@ -1,1 +1,21 @@
-<p>home-page works!</p>,
+<div
+  class="hero min-h-screen"
+  style="background-image: url(https://images.pexels.com/photos/8828391/pexels-photo-8828391.jpeg);"
+>
+  <div class="hero-overlay"></div>
+
+  <div class="hero-content text-neutral-content text-center">
+    <div class="max-w-md">
+      <h1 class="mb-5 text-5xl font-bold drop-shadow-lg text-white">
+        Country App
+      </h1>
+      <p class="mb-5 drop-shadow-md text-gray-100">
+        Explore the world with our comprehensive country information app.
+        Discover details about countries, including demographics, geography,
+        culture, and more.
+      </p>
+      <button routerLink='/country' class="btn btn-primary">Get Started</button>
+    </div>
+  </div>
+</div>
+
