--- a/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,3 +1,3 @@
 <country-search-input (query)="onSearch($event)" placeholder='Search by capital'></country-search-input>
 
-<country-list />
+<country-list [countries]="countries()" />
