--- a/src/app/country/pages/by-country-page/by-country-page.component.html
+++ b/src/app/country/pages/by-country-page/by-country-page.component.html
@@ -1,3 +1,3 @@
 <country-search-input (query)="onSearch($event)" placeholder='Search by country'></country-search-input>
 
-<country-list />
+<country-list [countries]="[]" />
