FEAT: Add spanishName to Country interface and update mapper and list component

--- a/src/app/country/components/list/list.component.html
+++ b/src/app/country/components/list/list.component.html
@@ -23,7 +23,7 @@
           <td>
             <img class="w-10" [src]="country.flagSvg" [alt]="country.name" />
           </td>
-          <td>{{ country.name }}</td>
+          <td>{{ country.spanishName }}</td>
           <td>{{ country.capital }}</td>
           <td>{{ country.population }}</td>
           <td>
