--- a/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,3 +1,9 @@
-<country-search-input (query)="onSearch($event)" placeholder='Search by capital'></country-search-input>
+<country-search-input (query)="query.set($event)" placeholder='Search by capital'></country-search-input>
 
-<country-list [countries]="countries()" />
+<country-list
+  [countries]="countryResource.value() ?? []"
+  [isEmpty]="countryResource.value()?.length === 0"
+  [isLoading]="countryResource.isLoading()"
+  [errorMessage]="countryResource.error()"
+/>
+
