--- a/src/app/country/pages/by-country-page/by-country-page.component.html
+++ b/src/app/country/pages/by-country-page/by-country-page.component.html
@@ -1,3 +1,10 @@
-<country-search-input (query)="onSearch($event)" placeholder='Search by country'></country-search-input>
+<country-search-input (query)="country.set($event)" placeholder='Search by country'></country-search-input>
 
-<country-list [countries]="[]" />
+<country-list
+  [countries]="countryResource.value() ?? []"
+  [isEmpty]="countryResource.value()?.length === 0"
+  [isLoading]="countryResource.isLoading()"
+  [errorMessage]="countryResource.error()"
+/>
+
+
