--- a/src/app/country/pages/by-region-page/by-region-page.component.html
+++ b/src/app/country/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,18 @@
-<country-list [countries]="[]" />
+<!-- <region-menu /> -->
+<h1 class="text-2xl">Countries by Region</h1>
+<h3 class="text-xl">Select a Region</h3>
+
+<section class="row mt-2">
+  <div class="flex-col">
+    @for (region of regions; track region) {
+      <button class="btn btn-outline mr-2 w-[100px]" [class.btn-primary]="selectedRegion() === region" (click)="selectedRegion.set(region)">{{region}}</button>
+    }
+  </div>
+</section>
+
+<country-list
+  [countries]="countryResource.value() ?? []"
+  [isEmpty]="countryResource.value()?.length === 0"
+  [isLoading]="countryResource.isLoading()"
+  [errorMessage]="countryResource.error()"
+/>
