--- a/src/app/country/components/search-input/search-input.component.html
+++ b/src/app/country/components/search-input/search-input.component.html
@@ -7,6 +7,7 @@
     #txtSearch
     (keyup.enter)="query.emit(txtSearch.value)"
     (keyup)="inputValue.set(txtSearch.value)"
+    [value]="inputValue()"
   />
 
   <button
