--- a/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,4 +1,4 @@
-<country-search-input (query)="query.set($event)" placeholder='Search by capital'></country-search-input>
+<country-search-input (query)="query.set($event)" placeholder='Search by capital' [initialValue]="query()"></country-search-input>
 
 <country-list
   [countries]="countryResource.value() ?? []"
